--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
         </nav>
     </div>
       <div class="articles">
-          <article id="dayForcast" class="dayForcast">
-      
+        <article id="dayForcast" class="dayForcast">
+        <div class="information">
+            <div class="city"></div>
+            <div class="date"></div>
+            <div id=icon></div>
+            <div class="temp"></div>
+            <div class="humidity"></div>
+            <div class="wind"></div>
+            <div class="uv"></div>
+        </div>
       </article>
       <article id="fiveDayForcast" class="fiveDayForcast">
 
@@ -41,7 +49,10 @@
 
         </p>
     </footer>
-    <script src="scripts.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="scripts.js">
+    
+    </script>
+  
 </body>
 </html>
