--- a/New folder/index.html
+++ b/New folder/index.html
@@ -24,7 +24,6 @@
             </form>
             <div id="recent">
             </div>
-            <button id="clear-search" class="clear-search" onclick="clearAll()">CLEAR!</button>
         </nav>
     </div>
     <div class="articles">
@@ -43,6 +42,11 @@
         </div>
         </article>
         <div id="fiveDayForcast" class="fiveDayForcast">
+            <div class="fiveDays" id="today"></div>
+            <div class="fiveDays" id="tomorrow"></div>
+            <div class="fiveDays" id="theNextDay"></div>
+            <div class="fiveDays" id="theDayAfter"></div>
+            <div class="fiveDays" id="theDayAfterThat"></div>
         </div>
     </div>
 
