--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="less-important">
                 <div class="humidity"></div>
                 <div class="wind"></div>
-                <div class="uv"></div>
+                <div id="uvWords">UV Index: <div class="uv"></div></div>
             </div>
         </div>
         </article>
@@ -49,9 +49,6 @@
     
     </main>
     <footer id="footer">
-        <p id="jokes">
-
-        </p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
