--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="less-important">
                 <div class="humidity"></div>
                 <div class="wind"></div>
-                <div id="uvWords">UV Index: <div class="uv"></div></div>
+                <div class="uv"></div>
             </div>
         </div>
         </article>
